--- a/index.qmd
+++ b/index.qmd
@@ -26,9 +26,9 @@ about:
 <div style="text-align: justify;">
 Wenlan Zhang is a second year Phd student at [The Bartlett Centre for Advanced Spatial Analysis (CASA)](https://www.ucl.ac.uk/bartlett/casa/bartlett-centre-advanced-spatial-analysis), University College London.
 
-Wenlan is currently working on her research project entitled 'Quantifying Digital Injustice: The Utility of Digital Footprint Data for Flood Risk Management in the Global South'. She is interested in sustainable smart cities in the Global South countries in general and would like to work in this sector in the future.
+Wenlan is currently working on her research project entitled 'Quantifying Digital Injustice: The Utility of Digital Footprint Data for Flood Risk Management in the Global South', under the supervision of [Dr. Chen Zhong](https://smartcityanalysis.com/team.html),  [Prof. Mark Pelling](https://profiles.ucl.ac.uk/90166-mark-pelling), and [Dr. Faith Taylor](https://www.kcl.ac.uk/people/faith-taylor). 
 
-Please feel free to [contact me](Wenlan:wenlan.zhang.21@ucl.ac.uk) if you would like to discuss potential projects.
+She is interested in sustainable smart cities in the Global South countries in general and would like to work in this sector in the future. Please feel free to [contact](Wenlan:wenlan.zhang.21@ucl.ac.uk) if you would like to discuss potential projects.
 </div>
 
 <!-- a renowned wizard and scholar of Middle-earth. Over the centuries, I have dedicated my life to studying the history, languages, and cultures of the peoples of Middle-earth. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications. -->
