--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -2,21 +2,32 @@
 title: Projects
 ---
 
-## The Languages of Middle-earth
+## Forest Integrity and Recovery for Euboea (FIRE, Greece)
 
-<img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
+<img src="IMG_4141.JPG" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.aristeia.us/isec-program.html', 'blank');"/>
 
-<a href="https://arxiv.org/abs/2210.07278" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/MetaUncertaintyPaper" target="_blank">Code</a><br>
+<a href="http://tinyurl.com/2wtyu7ms" target="_blank">Open Data Fire Detection App</a> | <a href="https://www.canva.com/design/DAF3nbr3Uvo/yx4Gr8MoqEFrE-xZueCnbw/view?utm_content=DAF3nbr3Uvo&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Project Presentation</a><br>
 
 Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.
 
 ----
 
-## The History of the War of the Ring
+## Land Cover Change Detection (Peak Distric, UK)
 
 <img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
 
-<a href="https://arxiv.org/abs/2112.08866" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
+<a href="https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority" target="_blank">Report</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
+
+I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
+
+
+----
+
+## Land Use Classification (Nairobi, Kenya)
+
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+
+<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.GIScience.2023.94" target="_blank">GIScience Conference</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
 
 I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
 
