--- a/index.qmd
+++ b/index.qmd
@@ -31,6 +31,13 @@ Wenlan is currently working on her research project entitled 'Quantifying Digita
 She is interested in sustainable smart cities in the Global South countries in general and would like to work in this sector in the future. Please feel free to [contact](Wenlan:wenlan.zhang.21@ucl.ac.uk) if you would like to discuss potential projects.
 </div>
 
+
+
+张文澜是伦敦大学学院，巴特莱特建筑学院下属高级空间分析系的一名博士二年级学生，博士导师为钟晨，Mark Pelling和Faith Taylor。
+她的研究方向主要集中在数据收集和算法层面解决全球南方的数据收集不平等的问题。她的研究案例为肯尼亚的首都，内罗毕市。
+
+张文澜对于可持续智慧城市在全球南方的发展相关领域十分感兴趣，希望未来可以在此方向就业。
+
 <!-- a renowned wizard and scholar of Middle-earth. Over the centuries, I have dedicated my life to studying the history, languages, and cultures of the peoples of Middle-earth. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications. -->
 
 <!-- My research interests span the entirety of Middle-earth, from the distant past to the present day. I am particularly passionate about the languages and mythologies of the Elves, Dwarves, and Men, and I have made significant contributions to the understanding of these subjects. My studies of the natural world have also been extensive, and I am an expert in the flora and fauna of Middle-earth. Additionally, I have been involved in many important historical events and offer valuable first-hand accounts and insights on the past. -->
