--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ She is interested in sustainable smart cities in the Global South countries in g
 </div>
 
 
-张文澜是伦敦大学学院，巴特莱特建筑学院下属高级空间分析系的一名博士二年级学生，博士导师为[钟晨](https://smartcityanalysis.com/team.html)，Mark Pelling和Faith Taylor。
+张文澜是伦敦大学学院，巴特莱特建筑学院下属高级空间分析系的一名博士二年级学生，博士导师为[钟晨](https://smartcityanalysis.com/team.html)，[Mark Pelling](https://profiles.ucl.ac.uk/90166-mark-pelling)和[Faith Taylor](https://www.kcl.ac.uk/people/faith-taylor)。
 她的研究方向主要集中在数据收集和算法层面解决全球南方的数据收集不平等的问题。她的研究案例为肯尼亚的首都，内罗毕市。
 
 张文澜对于可持续智慧城市在全球南方的发展相关领域十分感兴趣，希望未来可以在此方向就业。
