--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -4,23 +4,25 @@ title: Projects
 
 ## Forest Integrity and Recovery for Euboea (FIRE, Greece)
 
-<img src="IMG_4141.JPG" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.aristeia.us/isec-program.html', 'blank');"/>
+<img src="project_1_banner.JPG" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.aristeia.us/isec-program.html', 'blank');"/>
 
-<a href="http://tinyurl.com/2wtyu7ms" target="_blank">Open Data Fire Detection App</a> | <a href="https://www.canva.com/design/DAF3nbr3Uvo/yx4Gr8MoqEFrE-xZueCnbw/view?utm_content=DAF3nbr3Uvo&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Project Presentation</a><br>
+<a href="https://zhangwl54.projects.earthengine.app/view/firedetectionevia" target="_blank">Open Data Fire Detection App</a> | <a href="https://www.canva.com/design/DAF3nbr3Uvo/yx4Gr8MoqEFrE-xZueCnbw/view?utm_content=DAF3nbr3Uvo&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Project Presentation</a><br>
 
 Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.
 
 ----
 
-## Land Cover Change Detection (Peak Distric, UK)
+## Land Cover Change Detection (Peak Distric, The Alan Turing Institute, UK)
 
 <img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
 
-<a href="https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority" target="_blank">Report</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
+<a href="https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br>
 
-I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
+• Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting
+• Contributed to innovative solutions for land cover change detection using various methods including deep learning
+• Played a key role in a collaborative project, advancing understanding in environmental science and data technology
 
-
+<!-- 
 ----
 
 ## Land Use Classification (Nairobi, Kenya)
@@ -37,3 +39,4 @@ I am creating a comprehensive and detailed history of the conflict that goes bey
 <a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
 </div>
 ```
+-->
