--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -14,9 +14,9 @@ Over the centuries, I have devoted countless hours to deciphering and translatin
 
 ## Land Cover Change Detection (Peak Distric, The Alan Turing Institute, UK)
 
-<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', 'blank');"/>
 
-<a href="https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br>
+<a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br>
 
 • Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting
 • Contributed to innovative solutions for land cover change detection using various methods including deep learning
