--- a/education/index.qmd
+++ b/education/index.qmd
@@ -5,7 +5,15 @@ title: Education
 ## PhD in Advanced Spatial Analysis 
 March 2022 -                                           
 
-<a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">The Bartlett Centre for Advanced Spatial Analysis</a> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br>
+<a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">Centre for Advanced Spatial Analysis (CASA)</a> | <a href="https://www.ucl.ac.uk/bartlett/" target="_blank">The Bartlett Faculty of the Built Environment
+</a><br> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br>
+
+Research Topic: Comparing the utility of digital footprint data with existing methods on flood risk management and
+data injustice mitigation, a case study of Nairobi, Kenya
+
+Research Plan: Developing a workflow to assess the performance of digital footprint data in flood risk management
+by comparing with traditional methods in Nairobi, Kenya; Identifying digital invisible groups and
+proposing mitigation approaches to empower these groups for data-enabled decision-making.
 
 <!-- 
 <img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
@@ -17,11 +25,37 @@ Over the centuries, I have devoted countless hours to deciphering and translatin
 ----
 
 ## MSc in Environmental Technology
+September 2019 - September 2020  
 
+<a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy</a> | <a href="https://www.imperial.ac.uk/natural-sciences/" target="_blank">Faculty of Natural Sciences</a><br> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br>
+
+Master Thesis: Distributed Ledger Technology enabled passenger control system to maintain social distancing on
+public transport during COVID-19
+
+Result & Outcome: Applied a resource-sharing algorithm to the public transport sector to control the movement of the
+passengers. The system also came with a compliance scheme achieved by distributed ledger
+technology. The model used smart card data from London underground to simulate pass
+<!-- 
 <img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+-->
 
-<a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy,</a> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br>
+----
 
+## BEng in Marine Resource Development Technology
+September 2015 - June 2019
+
+<a href="https://mc.wh.sdu.edu.cn/" target="_blank">Marine College</a> | <a href="https://www.en.sdu.edu.cn/" target="_blank">Shandong University</a><br>
+<a href="https://mc.wh.sdu.edu.cn/" target="_blank">海洋学院</a> | <a href="https://www.sdu.edu.cn/" target="_blank">山东大学</a><br>
+
+Bachelor Thesis: An Anoxic Bio-Filter (ABF) - Membrane Bioreactor (MBR) combined process on high salinity
+wastewater treatment and the effect of membrane fouling
+
+Result & Outcome: Designed and installed an ABF system to augment the existing MBR setup; Conducted rigorous
+testing to evaluate the efficiency of the combined ABF-MBR process on denitrification effect and
+alleviate the membrane fouling; Producing report detailing findings and recommendations.
+<!-- 
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+-->
 <!-- 
 I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
 -->
