--- a/education/index.qmd
+++ b/education/index.qmd
@@ -8,10 +8,9 @@ March 2022 -
 <a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">Centre for Advanced Spatial Analysis (CASA)</a> | <a href="https://www.ucl.ac.uk/bartlett/" target="_blank">The Bartlett Faculty of the Built Environment
 </a><br> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br>
 
-Research Topic: Comparing the utility of digital footprint data with existing methods on flood risk management and
-data injustice mitigation, a case study of Nairobi, Kenya
+Research Topic: Quantifying digital injustice: a case study of Nairobi, Kenya
 
-Research Plan: Developing a workflow to assess the performance of digital footprint data in flood risk management
+Research Plan: Developing a workflow to assess the performance of big data 
 by comparing with traditional methods in Nairobi, Kenya; Identifying digital invisible groups and
 proposing mitigation approaches to empower these groups for data-enabled decision-making.
 
