--- a/experience/index.qmd
+++ b/experience/index.qmd
@@ -6,9 +6,16 @@ title: Experience
 
 <img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
 
-<a href="https://arxiv.org/abs/2210.07278" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/MetaUncertaintyPaper" target="_blank">Code</a><br>
+<a href="https://www.worldbank.org/en/about/unit/unit-dec/impactevaluation" target="_blank">DIME, World Bank</a>
+<!--| <a href="https://github.com/marvinschmitt/MetaUncertaintyPaper" target="_blank">Code</a><br> -->
 
-Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.
+Supervisor: Sveta  
+Responsibility:  
+ - Organising Netmob 2024  
+ - Prepare dataset for Netmob Data Challenge  
+ - Transport Policy Impact evaluation: Bogata Transmiliano
+
+<!-- I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.-->
 
 ----
 
@@ -16,20 +23,26 @@ Over the centuries, I have devoted countless hours to deciphering and translatin
 
 <img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
 
-<a href="https://arxiv.org/abs/2112.08866" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
+<a href="https://www.ucl.ac.uk/" target="_blank">UCL</a> 
+<!--|  <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>-->
 
-I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
-
+Supervisor: Andy Mac  
+Subject:  
+CASA005: GIS  
+CASA0027: RS and environemn, and policy  
+Tools:  
+R, QGIS, Google Earth Engine   
+<!-- I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.-->
 ----
 
-## Intern at United Nations Industrial Development Organization: UNIDO
-https://www.unido.org/
+## Intern at United Nations Industrial Development Organization
 
 <img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
 
-<a href="https://arxiv.org/abs/2112.08866" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>
+<a href="https://www.unido.org/" target="_blank">UNIDO</a> 
+<!--|  <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>-->
 
-I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
+<!-- I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.-->
 
 <!-- 
 ```{=html}
